Prevented word-wrap on page links

--- a/portfolio_leahhelmrich/_sass/minima/_layout.scss
+++ b/portfolio_leahhelmrich/_sass/minima/_layout.scss
@@ -46,6 +46,7 @@
   }
 
   .page-link {
+    white-space: nowrap;
     color: $text-color;
     line-height: $base-line-height;
 
